# sonarr_youtubedl

./: .gitignore  Dockerfile  LICENSE.md  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  update-ytdlp.yml
app/: sonarr_youtubedl.py  utils.py
