[project]
name = "sonarr-youtubedl"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro Rodrigues",email = "pedro@bbde.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (==2.32.5)",
    "yt-dlp (==2025.10.22)",
    "pyyaml (==6.0.2)",
    "schedule (==1.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
